--- a/7.html
+++ b/7.html
@@ -6,11 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    
     <script>
-
-        var i;
-        for (i=0;i<10;i+=1){
-            document.write(i+"<button>Submit</button><br>")
+        //else if er alternatiove holo switch case
+        var marks = 85;
+        switch(true){
+            case (marks <= 100 && marks >= 80):
+            document.write("A+");
+            break;
+            default:
+            document.write("Jana nai")
         }
     </script>
 </body>
